# graphmedia

./: Makefile  Makefile.am  Makefile.am.save  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool  readme  va.vala
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
data/: base.db  base.db-journal
src/: libmodelos.la  main.c  main.c.166r.expand  main.vala  modelos.h  modelos.vapi  resources.c  resources.c.166r.expand
src/.deps/: bin_graphmedia-main.Po  bin_graphmedia-resources.Po
src/.libs/: libmodelos.la
src/controlador/: appgui.c  appgui.vala  apppreferences.c  apppreferences.vala  dialogoalbum.c  dialogoalbum.vala  dialogoalbumvala  dialogoarchivo.c  dialogoarchivo.vala  dialogos.c  dialogos.vala  graphmedia.c  graphmedia.vala  modelo2vista.vala  src_libmodelos_la-appgui.lo  src_libmodelos_la-apppreferences.lo  src_libmodelos_la-dialogoalbum.lo  src_libmodelos_la-dialogoarchivo.lo  src_libmodelos_la-dialogos.lo  src_libmodelos_la-graphmedia.lo
src/controlador/.deps/: src_libmodelos_la-appgui.Plo  src_libmodelos_la-apppreferences.Plo  src_libmodelos_la-dialogoalbum.Plo  src_libmodelos_la-dialogoarchivo.Plo  src_libmodelos_la-dialogos.Plo  src_libmodelos_la-graphmedia.Plo
src/db/: album.c  album.vala  albumcanciones.c  albumcanciones.vala  archivo.c  archivo.vala  artista.c  artista.vala  audio.vala  basedatos.c  basedatos.vala  cancion.c  cancion.vala  epoca.c  epoca.vala  imagen.c  imagen.vala  persona.c  persona.vala  sentimientos.c  sentimientos.vala  src_libmodelos_la-album.lo  src_libmodelos_la-albumcanciones.lo  src_libmodelos_la-archivo.lo  src_libmodelos_la-artista.lo  src_libmodelos_la-basedatos.lo  src_libmodelos_la-cancion.lo  src_libmodelos_la-epoca.lo  src_libmodelos_la-imagen.lo  src_libmodelos_la-persona.lo  src_libmodelos_la-sentimientos.lo  src_libmodelos_la-tablas.lo  tablas.c  tablas.vala
src/db/.deps/: src_libmodelos_la-album.Plo  src_libmodelos_la-albumcanciones.Plo  src_libmodelos_la-archivo.Plo  src_libmodelos_la-artista.Plo  src_libmodelos_la-basedatos.Plo  src_libmodelos_la-cancion.Plo  src_libmodelos_la-epoca.Plo  src_libmodelos_la-imagen.Plo  src_libmodelos_la-persona.Plo  src_libmodelos_la-sentimientos.Plo  src_libmodelos_la-tablas.Plo
src/lib/: BaseDatos.c  BaseDatos.vala  bibliotecario.vala  localizador.vala  src_libmodelos_la-BaseDatos.lo
src/lib/.deps/: src_libmodelos_la-BaseDatos.Plo
src/test/: ASAS  base_prueba.db  generador.c  generador.vala  generadorcadenas.vala  main.c  main.vala  schema.sql  src_libmodelos_la-generador.lo  testalbums.c  testalbums.vala  testartistas.c  testartistas.vala  testbasedatos.c  testbasedatos.vala  testcanciones.c  testcanciones.vala  testcase.c  testcase.vala  testgenerador.c  testgenerador.vala  testimagenes.c  testimagenes.vala  testpersona.c  testpersona.vala  testsentimientos.c  testsentimientos.vala
src/test/.deps/: src_libmodelos_la-generador.Plo  test_run-main.Po  test_run-testalbums.Po  test_run-testartistas.Po  test_run-testbasedatos.Po  test_run-testcanciones.Po  test_run-testcase.Po  test_run-testgenerador.Po  test_run-testimagenes.Po  test_run-testpersona.Po  test_run-testsentimientos.Po
src/ui/: app-menu.ui  context.ui  contexto.ui  details.ui  dialog_albums.ui  dialogoalbums.ui  dialogoarchivo.ui  dialogs.ui  gears-menu.ui  graphmedia.desktop.desktop  graphmedia.gresource.xml  gschemas.compiled  home.ui  inicio.ui  org.gtk.graphmedia.gschema.xml  prefs.ui  window.ui  window.ui.2
test/: lista.txt  run
